[gd_scene load_steps=45 format=3 uid="uid://u4kgrk72nysw"]

[ext_resource type="Script" path="res://script/player.gd" id="1_x8yxy"]
[ext_resource type="Texture2D" uid="uid://b8akamlgb65mn" path="res://art/Player_animation_v2 Final.png" id="2_7kux4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u23xj"]
atlas = ExtResource("2_7kux4")
region = Rect2(64, 384, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcapb"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 384, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mowhm"]
atlas = ExtResource("2_7kux4")
region = Rect2(256, 384, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctm6p"]
atlas = ExtResource("2_7kux4")
region = Rect2(448, 384, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_07nc5"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_587an"]
atlas = ExtResource("2_7kux4")
region = Rect2(256, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cru10"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh0s3"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_woojk"]
atlas = ExtResource("2_7kux4")
region = Rect2(448, 48, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb6hu"]
atlas = ExtResource("2_7kux4")
region = Rect2(128, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k03l4"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y46cp"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2an17"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqsn8"]
atlas = ExtResource("2_7kux4")
region = Rect2(128, 288, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y2bj"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 288, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q85j"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 288, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjbai"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 288, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbady"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k13n5"]
atlas = ExtResource("2_7kux4")
region = Rect2(256, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkvcu"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bn5jh"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_730b4"]
atlas = ExtResource("2_7kux4")
region = Rect2(448, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ibsg"]
atlas = ExtResource("2_7kux4")
region = Rect2(128, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_547rv"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym8lr"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq4bf"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppwjb"]
atlas = ExtResource("2_7kux4")
region = Rect2(128, 336, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfry0"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 336, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr8qw"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 336, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7w4f"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 336, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubae3"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj22h"]
atlas = ExtResource("2_7kux4")
region = Rect2(256, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq16c"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_otb15"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwyte"]
atlas = ExtResource("2_7kux4")
region = Rect2(448, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_buaeu"]
atlas = ExtResource("2_7kux4")
region = Rect2(128, 240, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpdls"]
atlas = ExtResource("2_7kux4")
region = Rect2(192, 240, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh6iw"]
atlas = ExtResource("2_7kux4")
region = Rect2(384, 240, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oixfq"]
atlas = ExtResource("2_7kux4")
region = Rect2(320, 240, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_dufmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u23xj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcapb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mowhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctm6p")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07nc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_587an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cru10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lh0s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_woojk")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb6hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k03l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y46cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2an17")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqsn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y2bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q85j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjbai")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbady")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k13n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkvcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bn5jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_730b4")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ibsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_547rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym8lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq4bf")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppwjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfry0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr8qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7w4f")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubae3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj22h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq16c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otb15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwyte")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_buaeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpdls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh6iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oixfq")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wj4x"]
size = Vector2(10.5, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_v8cps"]
radius = 26.0192

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_x8yxy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_dufmi")
animation = &"back_attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_0wj4x")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_v8cps")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.380392, 0.752941, 0.368627, 1)
offset_left = -15.0
offset_top = 12.0
offset_right = 285.0
offset_bottom = 72.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regin_timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="oxygenbar" type="ProgressBar" parent="."]
modulate = Color(0.603922, 0.94902, 0.94902, 1)
offset_left = -15.0
offset_top = 19.0
offset_right = 285.0
offset_bottom = 79.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="oxygentimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="regin_timer" to="." method="_on_regin_timer_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="oxygentimer" to="." method="_on_oxygentimer_timeout"]
